--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,11 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+
+    link(rel="stylesheet", href="/lib/materialize/dist/css/materialize.min.css")
+    link(rel='stylesheet', href='/css/style.css')
   body
     block content
+    script(src="/lib/jquery/jquery.min.js")
+    script(src="/lib/materialize/dist/js/materialize.min.js")
+    block scripts
