--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,7 +6,18 @@ html
     link(rel="stylesheet", href="/lib/materialize/dist/css/materialize.min.css")
     link(rel='stylesheet', href='/css/style.css')
   body
+    .navbar-fixed
+      nav
+        .nav-wrapper.blue.lighten-1
+          ul.right.hide-on-med-and-down
+            li
+              a(href="/") Generar Archivo JSON
+            li
+              a(href="/readArchive") Leer Archivo JSON
     block content
-    script(src="/lib/jquery/jquery.min.js")
+    script(src="/lib/vue/dist/vue.min.js")
+    script(src="/lib/jquery/dist/jquery.min.js")
     script(src="/lib/materialize/dist/js/materialize.min.js")
+    script(src="/js/sw/sweetalert.min.js")
+    script(src="/lib/axios/dist/axios.min.js")
     block scripts
