--- a/views/layout.pug
+++ b/views/layout.pug
@@ -13,7 +13,7 @@ html
             li
               a(href="/") Generar Archivo JSON
             li
-              a(href="/readArchive") Leer Archivo JSON
+              a(href="/readFile") Leer Archivo JSON
     block content
     script(src="/lib/vue/dist/vue.min.js")
     script(src="/lib/jquery/dist/jquery.min.js")
